# mcu

01-blink/: main.c
02-control/: CMakeLists.txt  main.c
02-control/led-task/: led-task.c  led-task.h
02-control/mem-task/: mem-task.h
02-control/protocol-task/: protocol-task.c
02-control/stdio-task/: stdio-task.c
02-echo/: main.c
02-printf/: main.c
03-adc/: CMakeLists.txt  get_adc.py  get_telemetry.py  main.c
03-adc/adc-task/: adc-task.c  adc-task.h
03-adc/led-task/: led-task.c
03-adc/protocol-task/: protocol-task.c
04-bme/: CMakeLists.txt  get_telemetry.py  main.c
05-display/: CMakeLists.txt  disp_image.py  main.c
05-display/led-task/: led-task.h
06-device/: CMakeLists.txt  main.c
06-device/mem-task/: mem-task.c
libs/bme280-driver/: CMakeLists.txt
libs/bme280-driver/include/: bme280-driver.h  bme280-regs.h
libs/bme280-driver/src/: bme280-driver.c
libs/protocol/: CMakeLists.txt
libs/protocol/include/: protocol-task.h
